--- a/KGERP/Views/Collection/PurchaseOrdersByID.cshtml
+++ b/KGERP/Views/Collection/PurchaseOrdersByID.cshtml
@@ -45,16 +45,12 @@
                                     <td>@Model.BankName</td>
                                     <th>Branch Name</th>
                                     <td>@Model.BranchName</td>
-
                                 </tr>
                                 <tr>
                                     <th>A/C Name</th>
                                     <td>@Model.ACName</td>
                                     <th>A/C No</th>
                                     <td>@Model.ACNo</td>
-
-
-
                                 </tr>
                             </table>
 
@@ -110,52 +106,59 @@
                                     <div class="col-md-1"> </div>
                                 }
 
-
                                 @if (Model.PaymentMasterId == 0)
                                 {
                                     <div class="row">
-
-                                        <div class="col-md-3">
+                                        <div class="col-md-4" id="inputChequeDate">
                                             <div class="form-group">
-                                                <label>Payment Date :</label>
-                                                <input name="TransactionDate" asp-for="TransactionDate" type="text" required="required" class="datePicker form-control" id="txtPaymentDate" placeholder="Payment date" autocomplete="off">
+                                                <label class="form-label">Payment Date<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                <input name="TransactionDate" asp-for="TransactionDate" type="text" class="datePicker form-control" id="txtChqDate" placeholder="Payment Date" autocomplete="off">
                                                 @Html.ValidationMessageFor(model => model.TransactionDate, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
-                                        <div class="col-md-3">
-                                            <div class="form-group">
-                                                <label for="txtDescription" class="col-form-label">Bank Name :</label>
-                                                <input name="MoneyReceiptNo" asp-for="MoneyReceiptNo" type="text" class="form-control" placeholder="Bank name">
 
-                                                @Html.ValidationMessageFor(model => model.MoneyReceiptName, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                        <div class="col-md-2">
+                                        <div class="bankInfo col-md-4">
                                             <div class="form-group">
-                                                <label for="txtDescription" class="col-form-label">Cheque No :</label>
-                                                <input name="MoneyReceiptNo" asp-for="MoneyReceiptNo" type="text" class="form-control" placeholder="Cheque no">
-
-                                                @Html.ValidationMessageFor(model => model.MoneyReceiptNo, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                        <div class="col-md-2">
-                                            <div class="form-group">
-                                                <label>Cheque Date :</label>
-                                                <input name="MoneyReceiptDate" asp-for="MoneyReceiptDate" type="text" class="datePicker form-control" id="txtPaymentDate" placeholder="Cheque date" autocomplete="off">
-                                                @Html.ValidationMessageFor(model => model.MoneyReceiptDate, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                        <div class="col-md-2">
-                                            <div class="form-group">
-                                                <label for="txtBankCharge" class="col-form-label">Bank Charge :</label>
-                                                @Html.TextBoxFor(model => model.BankCharge, new { id = "txtBankCharge", @class = "form-control", placeholder = "Bank Charge" })
-                                                @Html.ValidationMessageFor(model => model.BankCharge, "", new { @class = "text-danger" })
+                                                <label class="form-label">Select Bank<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                @Html.DropDownListFor(model => model.BankId, new SelectList(Model.BankList.OrderBy(order => order.Text), "Value", "Text"), "==Select Bank==", new { id = "ddlBankId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                                @Html.ValidationMessageFor(model => model.BankId, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
+                                        <div class="bankInfo col-md-4">
+                                            <div class="form-group">
+                                                <label class="form-label">Select Branch<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                @Html.DropDownListFor(model => model.BranchId, new SelectList(Model.BranchList.OrderBy(order => order.Text), "Value", "Text"), "==Select Branch==", new { id = "ddlBankBranchId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                                @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+
+                                        <div class="bankInfo col-md-4">
+                                            <div class="form-group">
+                                                <label class="form-label">Account Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                @Html.DropDownListFor(model => model.BankAccountInfoId, new SelectList(Model.AccountNoList.OrderBy(order => order.Text), "Value", "Text"), "==Select Account No==", new { id = "ddlBankAccountInfoId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                                @Html.ValidationMessageFor(model => model.BankAccountInfoId, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+
+                                        <div class="bankInfo col-md-4">
+                                            <div class="form-group">
+                                                <label class="form-label">Cheque Book<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                @Html.DropDownListFor(model => model.ChequeBookId, Model.ChequeBookList as SelectList, "==Select Cheque Book==", new { id = "ddlCheqeBookId", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
+                                                @Html.ValidationMessageFor(model => model.ChequeBookId, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-4" id="inputChequeNo">
+                                            <div class="form-group">
+                                                <label class="form-label">Cheque No<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                @Html.TextBoxFor(model => model.MoneyReceiptNo, new { id = "txtChqNo", @class = "form-control", placeholder = "Cheque No", @readonly = "true" })
+                                                @Html.ValidationMessageFor(model => model.MoneyReceiptNo, "", new { id = "chequeNoValidationMessage", @class = "text-danger" })
+                                            </div>
+                                        </div>
                                     </div>
 
-                                    <div class="row">
+                                    @*<div class="row">
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Payment Type :</label>
@@ -177,22 +180,21 @@
                                                 @Html.TextAreaFor(model => model.ReferenceNo, new { id = "txtReferenceNo", placeholder = "Reference no", @class = "form-control", Rows = 1, required = "required" })
                                                 @Html.ValidationMessageFor(model => model.ReferenceNo, "", new { @class = "text-danger" })
                                             </div>
-                                        </div>
-                                        @*<div class="col-md-2 text-right">
-                                                <div class="form-group">
-                                                    @Html.CheckBoxFor(model => model.IsAdjust, new { id = "checkboxAdjust", @class = "form-check" })
-                                                    <label for="checkboxAdjust" class="form-check-label">Adjust From Deposit?</label>
-                                                </div>
-                                            </div>*@
-                                    </div>
-                                }
+                                        </div>*@
+                                    @*<div class="col-md-2 text-right">
+                                            <div class="form-group">
+                                                @Html.CheckBoxFor(model => model.IsAdjust, new { id = "checkboxAdjust", @class = "form-check" })
+                                                <label for="checkboxAdjust" class="form-check-label">Adjust From Deposit?</label>
+                                            </div>
+                                        </div>*@
+                                @*</div>*@
+                            }
 
 
                                 <div class="row">
-
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Work Order No :</label>
+                                            <label for="message-text" class="col-form-label">Work Order No<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             @Html.DropDownListFor(model => model.PurchaseOrderId, Model.OrderMusterList as SelectList, "==Work Order No==", new { id = "ddlPurchaseOrderId", @class = "searchingDropdown form-control", required = "true" })
                                             @Html.ValidationMessageFor(model => model.PurchaseOrderId, "", new { @class = "text-danger" })
                                         </div>
@@ -200,7 +202,7 @@
 
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label for="txtDescription" class="col-form-label">Payable Amount :</label>
+                                            <label for="txtDescription" class="col-form-label">Payable Amount<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             <input name="PayableAmount" id="payableAmount" value="@(Convert.ToDecimal(Model.PayableAmountDecimal) - (Convert.ToDecimal(Model.OutAmount) + Convert.ToDecimal(Model.ReturnAmount)))" readonly="readonly" asp-for="PayableAmount" type="text" class="form-control">
                                             @Html.ValidationMessageFor(model => model.PayableAmount, "", new { @class = "text-danger" })
                                         </div>
@@ -208,9 +210,9 @@
 
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label for="txtOutAmount" class="col-form-label">Payment Amount :</label>
+                                            <label for="txtOutAmount" class="col-form-label">Payment Amount<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                             <input name="OutAmount" asp-for="OutAmount" type="text" required="required" class="form-control" id="txtOutAmount" placeholder="Payment amount">
-                                            @Html.ValidationMessageFor(model => model.OutAmount, "", new { id= "validOutAmount", @class = "text-danger" })
+                                            @Html.ValidationMessageFor(model => model.OutAmount, "", new { id = "validOutAmount", @class = "text-danger" })
                                         </div>
                                     </div>
                                 </div>
@@ -362,12 +364,12 @@
 
         </div>
 
-    </div>
-</section>
+        </div>
+    </section>
 
-@section scripts {
+    @section scripts {
 
-    <script type="text/javascript">
+        <script type="text/javascript">
 
         function makeProdReferenceSubmitable(rowId) {
             $("#submitPaymentMasterId").val(rowId)
@@ -377,13 +379,9 @@
         }
 
         $(document).ready(function () {
-            
 
             $("#ddlPurchaseOrderId").change(function () {
                 var purchaseOrderId = $('#ddlPurchaseOrderId').val();
-
-
-
                 $.ajax({
                        type: "GET",
                     url: "@Url.Action("GetPurchaseOrderPayableValue", "Procurement")",
@@ -393,7 +391,6 @@
 
                         $('#txtOutAmount').val(data);
                         $('#payableAmount').val(data);
-
                     }
                 });
             });
@@ -404,22 +401,17 @@
                 var AmountValue = parseFloat($('#txtOutAmount').val()) || 0;
                 if (AmountValue <= payableValue ) {
                     $("#validOutAmount").text("");
-
                 }
                 else {
                     $('#txtOutAmount').val(payableValue);
 
                     $("#validOutAmount").text("Amount cannot exceed the Payable amount!");
                 }
-
             });
 
             $("#ddlAccounting_BankOrCashParantId").change(function () {
                 var bankOrCashParantId = $("#ddlAccounting_BankOrCashParantId").val();
-
-
                 $.ajax({
-
                     type: "GET",
                     url: "@Url.Action("HeadGLByHead5ParentIdGet", "Vouchers")",
                     datatype: "Json",
@@ -431,16 +423,105 @@
                             $(data).each(function (index, item) {
                                 $("#ddlAccounting_BankOrCashId").append("<option value='" + item.Value + "'>" + item.Text + "</option>");
                             });
-
                         }
                     }
                 });
-
-
             })
         });
 
-    </script>
-}
+        $('#ddlBankId').on('change', function (event) {
+            var bankId = $("#ddlBankId option:selected").val();
+            var showBarnchList = $("#ddlBankBranchId");
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetBranchBybankId",
+                dataType: "json",
+                data: { bankId: bankId },
+                success: function (data) {
+                    showBarnchList.empty();
+                    showBarnchList.append("<option selected disabled>==Select Branch==</option>");
+                    $.each(data, function (index, item) {
+                        showBarnchList.append($('<option>', {
+                            value: item.BranchId,
+                            text: item.BranchName
+                        }));
+                    });
+                }
+            });
+        });
+
+        $('#ddlBankBranchId').on('change', function (event) {
+            var bankId = $("#ddlBankId option:selected").val();
+            var bankBranchId = $("#ddlBankBranchId option:selected").val();
+            var showAccountList = $("#ddlBankAccountInfoId");
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetAccountNoByBankBranchId",
+                dataType: "json",
+                data: { bankId: bankId, bankBranchId: bankBranchId },
+                success: function (data) {
+                    showAccountList.empty();
+                    showAccountList.append("<option selected disabled>==Select Account No==</option>");
+                    $.each(data, function (index, item) {
+                        showAccountList.append($('<option>', {
+                            value: item.BankAccountInfoId,
+                            text: item.AccountNo
+                        }));
+                    });
+                }
+            });
+        });
+
+        $('#ddlBankAccountInfoId').on('change', function (event) {
+            var bankAccountInfoId = $("#ddlBankAccountInfoId option:selected").val();
+            var showChequeBookList = $("#ddlCheqeBookId");
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetChequeBookListByAccountInfo",
+                dataType: "json",
+                data: { bankAccountInfoId: bankAccountInfoId },
+                success: function (data) {
+                    showChequeBookList.empty();
+                    showChequeBookList.append("<option selected disabled>==Select Cheque Book==</option>");
+                    $.each(data, function (index, item) {
+                        showChequeBookList.append($('<option>', {
+                            value: item.ChequeBookId,
+                            text: item.ChequeBookNo
+                        }));
+                    });
+                }
+            });
+        });
+
+        $('#ddlCheqeBookId').on('change', function (event) {
+            var chequeBookId = $("#ddlCheqeBookId option:selected").val();
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/GetChequeBookInfoById",
+                dataType: "json",
+                data: { chequeBookId: chequeBookId },
+                success: function (data) {
+
+
+                    if (data.UsedBookPage != data.TotalBookPage || data.UsedBookPage < data.TotalBookPage) {
+                        var predictNextPage = data.UsedBookPage - 1;
+                        var nextPage = predictNextPage;
+
+                        if (nextPage <= data.BookLastPageNumber) {
+                            $('#txtChqNo').val(data.BookFirstPageNumber + nextPage);
+                        }
+
+                        $('#chequeNoValidationMessage').text("");
+                    }
+                    else {
+                        $('#txtChqNo').val(0);
+                        $('#chequeNoValidationMessage').text("No more page here, Try with another book!");
+                    }
+                }
+            });
+        });
+
+        </script>
+    }
 
 
