stock transfer update

--- a/ErpReport/ErpReport/TCL_MaterialBillGenerateInvoice.rdl
+++ b/ErpReport/ErpReport/TCL_MaterialBillGenerateInvoice.rdl
@@ -9,7 +9,7 @@
       <am:Name>SSDTRS</am:Name>
       <am:Version>17.9.34622.214</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2024-04-28T03:30:43.3832508Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2024-04-29T05:30:05.9285667Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
@@ -74,11 +74,15 @@
         </Field>
         <Field Name="BillingMapId">
           <DataField>BillingMapId</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
+          <rd:TypeName>System.Int64</rd:TypeName>
         </Field>
         <Field Name="BillGeneratedNo">
           <DataField>BillGeneratedNo</DataField>
           <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="BillDate">
+          <DataField>BillDate</DataField>
+          <rd:TypeName>System.DateTime</rd:TypeName>
         </Field>
       </Fields>
     </DataSet>
@@ -497,7 +501,7 @@ from Company Where CompanyId=@CompanyId</CommandText>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!MaterialReceiveId.Value</Value>
+                                  <Value>=Fields!ReceiveQty.Value</Value>
                                   <Style>
                                     <FontSize>7pt</FontSize>
                                   </Style>
@@ -682,7 +686,7 @@ from Company Where CompanyId=@CompanyId</CommandText>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!MaterialReceiveId.Value)</Value>
+                                  <Value>=Sum(Fields!ReceiveQty.Value)</Value>
                                   <Style>
                                     <FontSize>7pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -1062,7 +1066,7 @@ from Company Where CompanyId=@CompanyId</CommandText>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Format(Fields!BillGeneratedNo.Value, "dd-MM-yyyy")</Value>
+                                  <Value>=Format(Fields!BillDate.Value, "dd-MM-yyyy")</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
@@ -1382,7 +1386,7 @@ from Company Where CompanyId=@CompanyId</CommandText>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Format(Fields!PurchaseOrderNo.Value, "dd-MM-yyyy")</Value>
+                                  <Value>=Fields!PurchaseOrderNo.Value</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
