--- a/KGERP/Views/BillRequisition/BudgetAndEstimatingApproval.cshtml
+++ b/KGERP/Views/BillRequisition/BudgetAndEstimatingApproval.cshtml
@@ -175,7 +175,7 @@
                                                     Total Project Value :
                                                 </th>
                                                 <th> @(Model.ProjectTotalValue)</th>
-                                                <th  style="text-align:right!important">Total Amount : </th>
+                                                <th style="text-align:right!important">Total Budget Amount : </th>
                                                 <th>
                                                     @(Model.TotalAmountBudget
     )
