--- a/KGERP/Views/Configuration/CommonSupplier.cshtml
+++ b/KGERP/Views/Configuration/CommonSupplier.cshtml
@@ -1,7 +1,7 @@
 ﻿@using KG.Core.Services
 
 @{
-    ViewData["Title"] = "New Suppliers";
+    ViewData["Title"] = "New Vendor";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
@@ -14,11 +14,11 @@
 </style>
 <section class="content-header">
     <h1>
-        New Suppliers
+        New Vendor
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">New Suppliers</li>
+        <li class="active">New Vendor</li>
     </ol>
 </section>
 <section class="content">
@@ -48,22 +48,24 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">BIN<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.BIN, new { id = "txtBIN", @class = "form-control", @placeholder = "Type BIN", required = "required" })
+                                        <label class="form-label">BIN</label>
+                                        @Html.TextBoxFor(model => model.BIN, new { id = "txtBIN", @class = "form-control", @placeholder = "Type BIN" })
                                         @Html.ValidationMessageFor(model => model.BIN, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Trade Licence Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.TradeLicenseNumber, new { id = "txtTradeLicenseNumber", @class = "form-control", @placeholder = "Type trade licence", required = "required" })
+                                        <label class="form-label">Trade Licence Numbe</label>
+                                        @Html.TextBoxFor(model => model.TradeLicenseNumber, new { id = "txtTradeLicenseNumber", @class = "form-control", @placeholder = "Type trade licence" })
                                         @Html.ValidationMessageFor(model => model.TradeLicenseNumber, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">TIN<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.TIN, new { id = "txtTIN", @class = "form-control", @placeholder = "Type TIN", required = "required" })
+                                        <label class="form-label">TIN</label>
+                                        @Html.TextBoxFor(model => model.TIN, new { id = "txtTIN", @class = "form-control", @placeholder = "Type TIN" })
                                         @Html.ValidationMessageFor(model => model.TIN, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -76,11 +78,13 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">NID Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.NID, new { id = "txtNidNumber", @class = "form-control", @placeholder = "Type NID", required = "required" })
+                                        <label class="form-label">NID Number</label>
+                                        @Html.TextBoxFor(model => model.NID, new { id = "txtNidNumber", @class = "form-control", @placeholder = "Type NID" })
                                         @Html.ValidationMessageFor(model => model.NID, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label class="form-label">Phone Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
@@ -90,8 +94,8 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Email Address<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.Email, new { id = "txtEmail", type = "email", @class = "form-control", @placeholder = "Type email address", required = "required" })
+                                        <label class="form-label">Email Address</label>
+                                        @Html.TextBoxFor(model => model.Email, new { id = "txtEmail", type = "email", @class = "form-control", @placeholder = "Type email address" })
                                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -102,6 +106,8 @@
                                         @Html.ValidationMessageFor(model => model.Common_CountriesFk, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label class="form-label">Business/Company Address<sup class="text-danger" title="Required"><b>*</b></sup></label>
@@ -112,42 +118,44 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label class="form-label">Supplier Category<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.DropDownListFor(model => model.VendorTypeId, new SelectList(Model.SupplierTypeList.OrderBy(order => order.Text), "Value", "Text"), "==Select Supplier Category==", new { id = "ddlSupplierTypeId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                        @Html.DropDownListFor(model => model.VendorTypeId, new SelectList(Model.SupplierTypeList.OrderBy(order => order.Text), "Value", "Text"), "==Select Supplier Category==", new { id = "ddlSupplierTypeId", @class = "form-control searchingDropdown", required = "required", style = "width:100%" })
                                         @Html.ValidationMessageFor(model => model.VendorTypeId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Select Bank<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        <label class="form-label">Select Bank</label>
                                         @Html.DropDownListFor(model => model.BankId, new SelectList(Model.BankList.OrderBy(order => order.Text), "Value", "Text"), "==Select Bank==", new { id = "ddlBankId", @class = "form-control searchingDropdown", style = "width:100%" })
                                         @Html.ValidationMessageFor(model => model.BankId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Select Branch<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        <label class="form-label">Select Branch</label>
                                         @Html.DropDownListFor(model => model.BranchId, new SelectList(Model.BankBranchList.OrderBy(order => order.Text), "Value", "Text"), "==Select Branch==", new { id = "ddlBankBranchId", @class = "form-control searchingDropdown", style = "width:100%" })
                                         @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Bank Routing Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.BankRoutingNumber, new { id = "txtBankRoutingNumber", @class = "form-control", @placeholder = "Type bank routing number", required = "required" })
+                                        <label class="form-label">Bank Routing Number</label>
+                                        @Html.TextBoxFor(model => model.BankRoutingNumber, new { id = "txtBankRoutingNumber", @class = "form-control", @placeholder = "Type bank routing number" })
                                         @Html.ValidationMessageFor(model => model.BankRoutingNumber, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label class="form-label">Bank Account Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.ACName, new { id = "txtACName", @class = "form-control", @placeholder = "Type account name", required = "required" })
+                                        <label class="form-label">Bank Account Name</label>
+                                        @Html.TextBoxFor(model => model.ACName, new { id = "txtACName", @class = "form-control", @placeholder = "Type account name" })
                                         @Html.ValidationMessageFor(model => model.ACName, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="message-text" class="f">Bank Account Number<sup class="text-danger" title="Required"><b>*</b></sup></label>
-                                        @Html.TextBoxFor(model => model.ACNo, new { id = "txtACNo", @class = "form-control", @placeholder = "Type account number", required = "required" })
+                                        <label for="message-text" class="f">Bank Account Number</label>
+                                        @Html.TextBoxFor(model => model.ACNo, new { id = "txtACNo", @class = "form-control", @placeholder = "Type account number" })
                                         @Html.ValidationMessageFor(model => model.ACNo, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -210,26 +218,26 @@
                                             @{int sl = 0;
                                             }
                                             <tbody>
-                                                @foreach (var item in Model.DataList.Where(c => c.VendorTypeId == (int)KGERP.Utility.EnumVendorTye.Supplier))
+                                                @foreach (var item in Model.DataList)
                                                 {
                                                     <tr>
                                                         <td>@(++sl)</td>
                                                         <td>@item.VendorTypeName</td>
                                                         <td>@item.Code</td>
                                                         <td>@item.Name</td>
-                                                        <td>@item.BIN</td>
-                                                        <td>@item.TradeLicenseNumber</td>
-                                                        <td>@item.TIN</td>
+                                                        <td>@(item.BIN == null ? "N/A" :  item.BIN)</td>
+                                                        <td>@(item.TradeLicenseNumber == null ? "N/A" :  item.TradeLicenseNumber)</td>
+                                                        <td>@(item.TIN == null ? "N/A" :  item.TIN)</td>
                                                         <td>@item.ContactPerson</td>
-                                                        <td>@item.NID</td>
+                                                        <td>@(item.NID == null ? "N/A" :  item.NID)</td>
                                                         <td>@item.Phone</td>
-                                                        <td>@item.Email</td>
+                                                        <td>@(item.Email == null ? "N/A" :  item.Email)</td>
                                                         <td>@item.Address, @item.Country</td>
-                                                        <td>@item.BankName</td>
-                                                        <td>@item.BranchName</td>
-                                                        <td>@item.ACName</td>
-                                                        <td>@item.ACNo</td>
-                                                        <td>@item.BankRoutingNumber</td>
+                                                        <td>@(item.BankName == null ? "N/A" :  item.BankName)</td>
+                                                        <td>@(item.BranchName == null ? "N/A" :  item.BranchName)</td>
+                                                        <td>@(item.ACName == null ? "N/A" :  item.ACName)</td>
+                                                        <td>@(item.ACNo == null ? "N/A" :  item.ACNo)</td>
+                                                        <td>@(item.BankRoutingNumber == null ? "N/A" :  item.BankRoutingNumber)</td>
                                                         <td>@item.Remarks</td>
                                                         <td>
                                                             <a id="@item.ID" onclick="makeEditble(@item.ID);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
